Changed CSV files

--- a/data_source.ipynb
+++ b/data_source.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "4            5  Work       5"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,12 +116,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checklistTable.to_csv(\"checklistTable.csv\")"
+    "checklistTable.to_csv(\"generatedData/checklistTable.csv\", index=False, header=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -156,51 +156,102 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2022-10-10</td>\n",
+       "      <td>2022-09-24</td>\n",
        "      <td>Attend 9:30 am meeting</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>2022-09-22</td>\n",
+       "      <td>2022-10-08</td>\n",
        "      <td>Attend 9:30 am meeting</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
-       "      <td>2022-09-28</td>\n",
+       "      <td>2022-09-22</td>\n",
        "      <td>Attend 9:30 am meeting</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>2022-09-22</td>\n",
+       "      <td>2022-10-18</td>\n",
        "      <td>Attend 9:30 am meeting</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "      <td>2022-10-17</td>\n",
+       "      <td>2022-09-23</td>\n",
        "      <td>Attend 9:30 am meeting</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>996</td>\n",
+       "      <td>996</td>\n",
+       "      <td>2022-09-26</td>\n",
+       "      <td>Upper body</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>997</td>\n",
+       "      <td>997</td>\n",
+       "      <td>2022-10-12</td>\n",
+       "      <td>Upper body</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>998</td>\n",
+       "      <td>998</td>\n",
+       "      <td>2022-10-18</td>\n",
+       "      <td>Upper body</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>999</td>\n",
+       "      <td>999</td>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>Upper body</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>2022-09-25</td>\n",
+       "      <td>Upper body</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1000 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   taskId  checkListId dateCompleted             taskContent\n",
-       "0       1            1    2022-10-10  Attend 9:30 am meeting\n",
-       "1       2            2    2022-09-22  Attend 9:30 am meeting\n",
-       "2       3            3    2022-09-28  Attend 9:30 am meeting\n",
-       "3       4            4    2022-09-22  Attend 9:30 am meeting\n",
-       "4       5            5    2022-10-17  Attend 9:30 am meeting"
+       "     taskId  checkListId dateCompleted             taskContent\n",
+       "0         1            1    2022-09-24  Attend 9:30 am meeting\n",
+       "1         2            2    2022-10-08  Attend 9:30 am meeting\n",
+       "2         3            3    2022-09-22  Attend 9:30 am meeting\n",
+       "3         4            4    2022-10-18  Attend 9:30 am meeting\n",
+       "4         5            5    2022-09-23  Attend 9:30 am meeting\n",
+       "..      ...          ...           ...                     ...\n",
+       "995     996          996    2022-09-26              Upper body\n",
+       "996     997          997    2022-10-12              Upper body\n",
+       "997     998          998    2022-10-18              Upper body\n",
+       "998     999          999    2022-10-02              Upper body\n",
+       "999    1000         1000    2022-09-25              Upper body\n",
+       "\n",
+       "[1000 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,21 +281,21 @@
     "    \"taskContent\": taskContent\n",
     "})\n",
     "\n",
-    "taskTable.head()"
+    "taskTable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "taskTable.to_csv(\"taskTable.csv\")"
+    "taskTable.to_csv(\"generatedData/taskTable.csv\", index=False, header=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -279,36 +330,36 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>Evelyn</td>\n",
-       "      <td>0.345289</td>\n",
+       "      <td>Benjamin</td>\n",
+       "      <td>0.391462</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>Benjamin</td>\n",
-       "      <td>0.276033</td>\n",
+       "      <td>Olivia</td>\n",
+       "      <td>0.585747</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>Liam</td>\n",
-       "      <td>0.297167</td>\n",
+       "      <td>Olivia</td>\n",
+       "      <td>0.244078</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
-       "      <td>Elijah</td>\n",
-       "      <td>0.342325</td>\n",
+       "      <td>James</td>\n",
+       "      <td>0.806888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>Benjamin</td>\n",
-       "      <td>0.566272</td>\n",
+       "      <td>Liam</td>\n",
+       "      <td>0.923193</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -316,14 +367,14 @@
       ],
       "text/plain": [
        "   userId passwords     names  completionRate\n",
-       "0       1         1    Evelyn        0.345289\n",
-       "1       2         1  Benjamin        0.276033\n",
-       "2       3         1      Liam        0.297167\n",
-       "3       4         1    Elijah        0.342325\n",
-       "4       5         1  Benjamin        0.566272"
+       "0       1         1  Benjamin        0.391462\n",
+       "1       2         1    Olivia        0.585747\n",
+       "2       3         1    Olivia        0.244078\n",
+       "3       4         1     James        0.806888\n",
+       "4       5         1      Liam        0.923193"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,16 +417,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "userTable.to_csv(\"userTable.csv\")"
+    "userTable.to_csv(\"generatedData/userTable.csv\", index=False, header=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -402,7 +453,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>groupId</th>\n",
-       "      <th>name</th>\n",
+       "      <th>names</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -436,7 +487,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   groupId    name\n",
+       "   groupId   names\n",
        "0        1  group0\n",
        "1        2  group1\n",
        "2        3  group2\n",
@@ -444,7 +495,7 @@
        "4        5  group4"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,16 +510,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    " friendGroupTable.to_csv(\"friendGroupTable.csv\")"
+    " friendGroupTable.to_csv(\"generatedData/friendGroupTable.csv\", index=False, header=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -537,7 +588,7 @@
        "4       5        1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,16 +607,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "relationshipTable.to_csv(\"relationshipTable.csv\")"
+    "relationshipTable.to_csv(\"generatedData/relationshipTable.csv\", index=False, header=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +689,7 @@
        "4        5  Finish your tasks             5"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,11 +705,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "alertTable.to_csv(\"alertTable.csv\")"
+    "alertTable.to_csv(\"generatedData/alertTable.csv\", index=False, header=False)"
    ]
   },
   {
