--- a/data_source.ipynb
+++ b/data_source.ipynb
@@ -722,7 +722,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -736,7 +736,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3d146929ce765268887098412894cd4ed7d9e49af2163b450ecb00ce53f5f9d5"
+   }
   }
  },
  "nbformat": 4,
